--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Happy Birthday Makfi</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="loading.css">
-    <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet/less" href="cake.less">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+	<title>Happy Birthday Jaan❤️</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="loading.css">
+	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet/less" href="cake.less">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 
 <body>
-    <div class="loading"></div>
-    <audio class="song" controls loop>
+	<div class="loading"></div>
+	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
     </audio>
 
@@ -29,63 +29,68 @@
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_yellow"></div></div>
-            <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_red"></div></div>
-            <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_blue"></div></div>
-            <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_green"></div></div>
-            <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_pink"></div></div>
-            <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_orange"></div></div>
-        </div>
-        <div class="row"><div class="col-md-12 text-center"><img src="banner.png" class="bannar"></div></div>
-        <div class="row cake-cover">
-            <div class="col-md-12 text-center">
-                <div class="cake">
-                  <div class="velas">
-                    <div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div>
-                  </div>
-                  <div class="cobertura"></div><div class="bizcocho"></div>
-                </div>
-            </div>
-        </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_yellow"></div></div>
+			<div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_red"></div></div>
+			<div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_blue"></div></div>
+			<div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_green"></div></div>
+			<div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_pink"></div></div>
+			<div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_orange"></div></div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<img src="banner.png" class="bannar">
+			</div>
+		</div>
+		<div class="row cake-cover">
+			<div class="col-md-12 text-center">
+				<div class="cake">
+				  <div class="velas">
+				    <div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div>
+				  </div>
+				  <div class="cobertura"></div><div class="bizcocho"></div>
+				</div>
+			</div>
+		</div>
 
-        <div class="row message">
-            <div class="col-md-12">
-                <p>Happy 17th Birthday Jaan ❤️</p>
-                <p>It’s wild to think that this is your last year</p>
-                <p>of being a "true" teenager</p>
-                <p>before the world starts calling you an adult.</p>
-                <p>But honestly? I hope you never lose</p>
-                <p>the way you see the world right now.</p>
-                <p>There are so many things I love about you,</p>
-                <p>but if I had to pick,</p>
-                <p>it’s the way you make me laugh until my stomach hurts.</p>
-                <p>Being 17 is about big dreams and even bigger memories,</p>
-                <p>and I feel so lucky that I get to be a part of yours.</p>
-                <p>I hope today is as incredible as you are.</p>
-                <p>Eat too much cake, take way too many photos,</p>
-                <p>and remember that I’m your #1 fan, always.</p>
-                <p><strong>I love you a lot ❤️❤️</strong></p>
-                <p>Happy Birthday Makfi!</p>
-            </div>
-        </div>
+		<div class="row message">
+			<div class="col-md-12">
+				<p>Happy 17th Birthday Jaan ❤️</p>
+				<p>It’s wild to think that this is your last year</p>
+				<p>of being a "true" teenager</p>
+				<p>before the world starts calling you an adult.</p>
+				<p>But honestly? I hope you never lose</p>
+				<p>the way you see the world right now.</p>
+				<p>There are so many things I love about you,</p>
+				<p>it’s the way you make me laugh until my stomach hurts.</p>
+				<p>You have this amazing energy</p>
+				<p>that just makes everything better the second you show up.</p>
+				<p>Being 17 is about big dreams and even bigger memories,</p>
+				<p>and I feel so lucky that I get to be a part of yours.</p>
+				<p>I hope today is as incredible as you are.</p>
+				<p>Eat too much cake, take way too many photos,</p>
+				<p>and remember that I’m your #1 fan, always.</p>
+				<p><strong>I love you a lot ❤️❤️</strong></p>
+				<p>Happy Birthday Makfi!</p>
+			</div>
+		</div>
 
-        <div class="navbar navbar-fixed-bottom">
-            <div class="row">
-                <div class="col-md-6 text-center col-md-offset-3">
-                    <button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-                    <button class="btn btn-primary" id="play">Play Music</button>
-                    <button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-                    <button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-                    <button class="btn btn-primary" id="cake_fadein">Delicious Cake</button>
-                    <button class="btn btn-primary" id="light_candle">Light Candle</button>
-                    <button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-                    <button class="btn btn-primary" id="story">A message for you</button>
-                </div>
-            </div>
-        </div>
-    </div>
+		<div class="navbar navbar-fixed-bottom">
+			<div class="row">
+				<div class="col-md-6 text-center col-md-offset-3">
+					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
+					<button class="btn btn-primary" id="play">Play Music</button>
+					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
+					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
+					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+					<button class="btn btn-primary" id="story">A message for you</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
