--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Happy Birthday Jaan❤️</title>
+	<title>Happy Birthday Pakhi❤️ </title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -21,11 +21,10 @@
     <div class="balloons text-center" id="b1"><h2 style="color:#F2B300;">H</h2></div>
     <div class="balloons text-center" id="b2"><h2 style="color:#0719D4;">B</h2></div>
     <div class="balloons text-center" id="b3"><h2 style="color:#D14D39;">D</h2></div>
-    <div class="balloons text-center" id="b4"><h2 style="color:#8FAD00;">M</h2></div>
+    <div class="balloons text-center" id="b4"><h2 style="color:#8FAD00;">J</h2></div>
     <div class="balloons text-center" id="b5"><h2 style="color:#8377E4;">A</h2></div>
-    <div class="balloons text-center" id="b6"><h2 style="color:#99C96A;">K</h2></div>
-    <div class="balloons text-center" id="b7"><h2 style="color:#20CFB4;">F</h2></div>
-    <div class="balloons text-center" id="b8"><h2 style="color:#ff69b4;">I</h2></div>
+    <div class="balloons text-center" id="b6"><h2 style="color:#99C96A;">A</h2></div>
+    <div class="balloons text-center" id="b7"><h2 style="color:#20CFB4;">N</h2></div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
 
@@ -69,8 +68,8 @@
 				<p>Being 17 is about big dreams and even bigger memories,</p>
 				<p>and I feel so lucky that I get to be a part of yours.</p>
 				<p>I hope today is as incredible as you are.</p>
-				<p>Eat too much cake, take way too many photos,</p>
-				<p>and remember that I’m your #1 fan, always.</p>
+				<p>Eat too much cake, take way too many photos for me,</p>
+				<p>and remember thatyou are my fav always.</p>
 				<p><strong>I love you a lot ❤️❤️</strong></p>
 				<p>Happy Birthday Makfi!</p>
 			</div>
