--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Happy Birthday Pakhi❤️ </title>
+	<title>Happy Birthday Pakhi</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -68,8 +68,8 @@
 				<p>Being 17 is about big dreams and even bigger memories,</p>
 				<p>and I feel so lucky that I get to be a part of yours.</p>
 				<p>I hope today is as incredible as you are.</p>
-				<p>Eat too much cake, take way too many photos for me,</p>
-				<p>and remember thatyou are my fav always.</p>
+				<p>Eat too much cake, take way too many photos,</p>
+				<p>and remember thatyou are my fav, always.</p>
 				<p><strong>I love you a lot ❤️❤️</strong></p>
 				<p>Happy Birthday Makfi!</p>
 			</div>
