--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div id="lock-screen">
         <h2 style="color: #d14d39;">Surprise Loading...</h2>
         <div id="timer"></div>
-        <p>অপেক্ষা করো ১৭ তারিখ পর্যন্ত! ❤️</p>
+        <p>Please wait madam until the 17th of the month.❤️</p>
         <div class="pass-box">
-            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
+            <input type="password" id="password" placeholder=Secret password...">
             <button onclick="checkPass()">Unlock</button>
         </div>
     </div>
