--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="timer"></div>
         <p>Please wait madam until the 17th of the month❤️</p>
         <div class="pass-box">
-            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
+            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
             <button onclick="checkPass()">Unlock</button>
         </div>
     </div>
@@ -57,6 +57,8 @@
             <div class="row cake-cover">
                 <div class="col-md-12 text-center">
                     <div class="cake">
+                      <div class="knife" id="knife"></div>
+                      
                       <div class="velas">
                         <div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div>
                       </div>
@@ -100,7 +102,6 @@
     <script src="effect.js"></script>
 
     <script>
-        // ১৭ ফেব্রুয়ারি ২০২৬ তারিখটি সেট করা
         var countDate = new Date('Feb 17, 2026 00:00:00').getTime();
 
         function updateTimer() {
