--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Happy Birthday Makfi</title>
+	<title>Happy Birthday Pakhi</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -29,9 +29,9 @@
     <div id="lock-screen">
         <h2 style="color: #d14d39;">Surprise Loading...</h2>
         <div id="timer"></div>
-        <p>অপেক্ষা করো ১৭ তারিখ পর্যন্ত! ❤️</p>
+        <p>Please wait untill the 17th Madam ❤️</p>
         <div class="pass-box">
-            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
+            <input type="password" id="password" placeholder="Secret password...">
             <button onclick="checkPass()">Unlock</button>
         </div>
     </div>
@@ -86,6 +86,7 @@
                         <button class="btn btn-primary" id="light_candle">Light Candle</button>
                         <button class="btn btn-primary" id="wish_message">Happy Birthday</button>
                         <button class="btn btn-primary" id="story">A message for you</button>
+						<button class="btn btn-primary" id="cake_cut">Let's Cut the Cake</button>
                     </div>
                 </div>
             </div>
@@ -129,7 +130,7 @@
             if (pass === "makfisday") {
                 unlock();
             } else {
-                alert("ভুল পাসওয়ার্ড! আবার চেষ্টা করো।");
+                alert("Nice try,Ultapalta pass diye labh nai pakhi😝");
             }
         }
 
