--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
             </div>
         </div>
     </div>
-	<div class="photo-gallery" id="gallery" style="display:none; text-align:center; margin-top:30px; padding-bottom: 50px;">
+	<div class="photo-gallery" id="gallery" style="display:none; text-align:center; margin-top:120px; padding-bottom: 50px;">
+    <h3 style="color: #ef5350; font-family: 'Signika', sans-serif;">Our Special Memories ❤️</h3>
+    <div class="slideshow-container" style="max-width: 300px; margin: auto; position: relative;">
+        <img src="m1.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; box-shadow: 0 5px 15px rgba(0,0,0,0.3);">
+        <img src="m2.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; box-shadow: 0 5px 15px rgba(0,0,0,0.3); display:none;">
+        <img src="m3.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; box-shadow: 0 5px 15px rgba(0,0,0,0.3); display:none;">
+    </div>
+</div>
     <h3 style="color: #ef5350; font-family: 'Signika', sans-serif;">Our Special Memories ❤️</h3>
     <div class="slideshow-container" style="max-width: 300px; margin: auto; position: relative;">
         <img src="m1.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; box-shadow: 0 5px 15px rgba(0,0,0,0.3);">
